# livemap

./: README.md  go.mod  go.sum  main.go  wails.json
.github/workflows/: full-resync-releases-to-r2.yml
.github/workflows/r2_release_sync/: common.py  full_resync.py  index.py
assets/: assets.go
assets/.github/workflows/: sync-releases-to-r2.yml
assets/.github/workflows/r2_release_sync/: edited.py  published.py  removed.py
cmd/livemap/frontend/wailsjs/go/: models.ts
cmd/livemap/frontend/wailsjs/go/gui/: App.d.ts  App.js
internal/: workflow.go
internal/appconfig/: config.go
internal/capture/: desktop.go  manager.go  printwindow.go  stream.go  wgc.go
internal/debugview/: manager.go
internal/gui/: app.go
internal/logx/: logx.go  path.go
internal/mapbundle/: bundle.go  bundle_test.go
internal/mapdata/: data.go
internal/maplibrary/: library.go
internal/mapmatch/: matcher.go  native_windows.go
internal/mapoverlay/: d2d.go  layout.go  logs.go  overlay.go  renderer.go  resources.go  win32.go
internal/matchtest/: tester.go
internal/procwin/: procwin.go
internal/regionselect/: selector.go
internal/taskbarid/: taskbarid.go
internal/view/: stream.go  viewer.go
internal/windowicon/: windowicon.go
native/mapmatch_dll/: CMakeLists.txt
native/mapmatch_dll/include/: mapmatch.h
native/mapmatch_dll/src/: mapmatch.cpp
native/wgc_dll/: CMakeLists.txt  README.md
native/wgc_dll/include/: wgc_capture.h
native/wgc_dll/src/: wgc_capture.cpp
